# Upande_coffee

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.claude-flow/data/: pending-insights.jsonl
coffee_harvest/: hooks.py  modules.txt  patches.txt
coffee_harvest/coffee_harvest/: custom_fields.py  dashboard_api.py  delivery_note.py  module_def.json  sales_invoice.py  setup.py
coffee_harvest/coffee_harvest/doctype/booking/: booking.json  booking.py
coffee_harvest/coffee_harvest/doctype/coffee_payment/: coffee_payment.json
coffee_harvest/coffee_harvest/doctype/daily_moisture_reading/: daily_moisture_reading.json  daily_moisture_reading.py
coffee_harvest/coffee_harvest/doctype/drying_assignment/: drying_assignment.js  drying_assignment.json  drying_assignment.py
coffee_harvest/patches/v1_0/: fix_booking_bin_stock_datatype.py
coffee_harvest/public/js/: delivery_note.js
upande_coffee/: custom_fields.py  endebess_setup.py  endebess_variants.py  hooks.py  modules.txt  patches.txt  selling_hooks.py  setup.py
upande_coffee/api/: bookingapi.py  dashboardapi.py  deliverynoteapi.py  dryingapi.py  millingapi.py  pickupapi.py  transferapi.py
upande_coffee/fixtures/: parchment_type.json  workflow.json  workflow_action_master.json  workflow_state.json
upande_coffee/patches/: drop_booking_doctype.py
upande_coffee/public/js/: coffee_selling.js  delivery_note.js  sales_invoice.js  sales_order.js
upande_coffee/upande_coffee/custom/: customer.json
upande_coffee/www/: coffee-dashboard.html  coffee_dashboard.py
(+88 files in other folders)
